[FEATURE] Fix image size & alignment issue #9 (#25)

--- a/frontend/src/components/Gallery/Gallery.scss
+++ b/frontend/src/components/Gallery/Gallery.scss
@@ -8,6 +8,8 @@
         
         
         &--image {
+            width: 100%;
+            height: 100%;
             max-width: 100%;
             min-height: 100%;
             object-fit: cover;
